updating docker base image & removing global var declaration in function

--- a/src/payload-receiver-service/Dockerfile
+++ b/src/payload-receiver-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8
+FROM python:3.8-slim
 EXPOSE 80
 COPY ./payload-receiver-service/app /app
 COPY ./payload-receiver-service/requirements.txt /app
