--- a/src/payload-receiver-service/payload-receiver-service.yaml
+++ b/src/payload-receiver-service/payload-receiver-service.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: payload-receiver-service
-        image: tybalex/payload-receiver-service:latest
+        image: amartyarancher/payload-receiver-service:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
