Revert changes made to payload receiver service for detecting control plane logs and instead move logic to preprocessing service

--- a/src/payload-receiver-service/payload-receiver-service.yaml
+++ b/src/payload-receiver-service/payload-receiver-service.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: payload-receiver-service
-        image: amartyarancher/payload-receiver-service:v0.0
+        image: sanjayrancher/payload-receiver-service
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
