Make sure to use latest image

--- a/src/payload-receiver-service/payload-receiver-service.yaml
+++ b/src/payload-receiver-service/payload-receiver-service.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: payload-receiver-service
-        image: sanjayrancher/payload-receiver-service
+        image: sanjayrancher/payload-receiver-service:latest
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
